--- a/index.html
+++ b/index.html
@@ -86,11 +86,30 @@
                     <!-- Xoa hang -->
                     <div class="remove">
                         <form action="#">
-                            <label for="input-remove">Nhập hàng muốn xóa</label>
-                            <input type="text" id="input-remove" name="" value="" required>
-                            <input type="button" class="button" id="remove-btn" value="Xóa">
-                            <!-- <input type="button" class="button" id="reset-btn" value="Xóa tất cả"> -->
-                            <a href="" class="button" id="reset-btn">Xóa tất cả</a>
+                            <div class="row">
+                                <div class="col l-8 m-12 c-12">
+                                    <div class="remove-choose">
+                                        <div class="row">
+                                            <div class="col l-3 m-12 c-12 label-wrap">
+                                                <label for="input-remove">Nhập hàng muốn xóa</label>
+                                            </div>
+                                            <div class="col l-9 m-12 c-12">
+                                                <div class="row no-gutters">
+                                                    <div class="col l-7 m-12 c-12">
+                                                        <input type="text" id="input-remove" name="" value="">
+                                                    </div>
+                                                    <div class="col l-5 m-12 c-12">
+                                                        <input type="button" class="button" id="remove-btn" value="Xóa">
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col l-4 m-12 c-12">
+                                    <a href="" class="button" id="reset-btn">Xóa tất cả</a>
+                                </div>
+                            </div>
                         </form>
                     </div>
                     
