fix reset button

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col l-4 m-12 c-12">
+                                <div class="col l-4 m-12 c-12 reset-wrap">
                                     <a href="" class="button" id="reset-btn">Xóa tất cả</a>
                                 </div>
                             </div>
