fix remove function

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                                     <div class="remove-choose">
                                         <div class="row">
                                             <div class="col l-3 m-12 c-12 label-wrap">
-                                                <label for="input-remove">Nhập hàng muốn xóa</label>
+                                                <label id="remove-label" for="input-remove">Nhập hàng muốn xóa</label>
                                             </div>
                                             <div class="col l-9 m-12 c-12">
                                                 <div class="row no-gutters">
