--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tính điểm trung bình</title>
+    <script src="https://kit.fontawesome.com/25a053a904.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="grid.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -99,6 +100,9 @@
                                                         <input type="text" id="input-remove" name="" value="">
                                                     </div>
                                                     <div class="col l-5 m-12 c-12">
+                                                        <!-- <button class="button" id="remove-btn">
+                                                            <i class="far fa-trash-alt"></i>
+                                                        </button> -->
                                                         <input type="button" class="button" id="remove-btn" value="Xóa">
                                                     </div>
                                                 </div>
@@ -107,7 +111,9 @@
                                     </div>
                                 </div>
                                 <div class="col l-4 m-12 c-12 reset-wrap">
-                                    <a href="" class="button" id="reset-btn">Xóa tất cả</a>
+                                    <a href="" class="button" id="reset-btn">Xóa tất cả
+                                        <i class="fas fa-exclamation-triangle"></i>
+                                    </a>
                                 </div>
                             </div>
                         </form>
