--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tính điểm trung bình</title>
     <script src="https://kit.fontawesome.com/25a053a904.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="grid.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./assets/css/grid.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
     <div class="main">
@@ -140,7 +140,7 @@
                         </div>
                         <div class="col l-6 m-6 c-12">
                             <div class="img-wrap">
-                                <img src="tinh_diem.jpg" alt="Bảng quy đổi điểm">
+                                <img src="./assets/img/tinh_diem.jpg" alt="Bảng quy đổi điểm">
                             </div>
                         </div>
                     </div>
@@ -149,9 +149,9 @@
         </div>
 
         <div class="footer">
-
+            <a href="./Du_doan/index.html">Bạn cần bao nhiêu điểm để có bằng Giỏi?</a>
         </div>
     </div>
 </body>
-<script src="script.js"></script>
+<script src="./assets/js/script.js"></script>
 </html>
