--- a/Du_doan/index.html
+++ b/Du_doan/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
     <div class="main">
@@ -43,5 +43,5 @@
         </div>
     </div>
 </body>
-<script src="script1.js"></script>
+<script src="./assets/js/script1.js"></script>
 </html>
