fix button on IOS

--- a/Du_doan/index.html
+++ b/Du_doan/index.html
@@ -22,7 +22,7 @@
                                 <div class="col l-5 m-5 c-12 sticker-container">
                                     <h2>Mục tiêu của bạn là gì?</h2>
                                     <div class="sticker-wrap">
-                                        <img class="sticker" src="./assets/img/unicorn (3).png" alt="">
+                                        <img class="sticker" src="./assets/img/struggle.png" alt="">
                                     </div>
                                 </div>
                                 <div class="col l-7 m-7 c-12 target-container">
