--- a/Du_doan/index.html
+++ b/Du_doan/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <title>Cần bao nhiêu điểm để ra trường bằng giỏi</title>
     <link rel="icon" type="image/x-icon" href="./assets/img/struggle.png">
     <link rel="stylesheet" href="./assets/css/grid.css">
