--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         </div>
 
         <div class="footer">
-            <a href="./Du_doan/index.html">Bạn cần bao nhiêu điểm để có bằng Giỏi?</a>
+            <a href="./Du_doan/">Bạn cần bao nhiêu điểm để có bằng Giỏi?</a>
         </div>
     </div>
 </body>
