--- a/Du_doan/index.html
+++ b/Du_doan/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-    <meta property="og:url" content="./assets/img/struggle.png">
+    <meta property="og:image" content="./assets/img/struggle.png" />
+    <meta property="og:image:width" content="1080" />
+    <meta property="og:image:height" content="1080"; />
     <title>Cần bao nhiêu điểm để ra trường bằng giỏi? | Công cụ tính điểm</title>
     <link rel="icon" type="image/x-icon" href="./assets/img/struggle.png">
     <link rel="stylesheet" href="./assets/css/grid.css">
