--- a/Du_doan/index.html
+++ b/Du_doan/index.html
@@ -82,4 +82,8 @@
     </div>
 </body>
 <script src="./assets/js/script1.js"></script>
+<script>
+    var test = 'tranxuan ,phuc';
+    console.log(test.indexOf(','));
+</script>
 </html>
