--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                                     <div class="remove-choose">
                                         <div class="row">
                                             <div class="col l-3 m-12 c-12 label-wrap">
-                                                <label id="remove-label" for="input-remove">Nhập hàng muốn xóa</label>
+                                                <label id="remove-label" for="input-remove">Nhập dòng muốn xóa</label>
                                             </div>
                                             <div class="col l-9 m-12 c-12">
                                                 <div class="row no-gutters">
@@ -132,7 +132,7 @@
                         <div class="col l-6 m-6 c-12">
                             <div class="text-wrap">
                                 <h3>Công cụ tính điểm này sử dụng bảng quy đổi điểm
-                                    của Đại học Giao thông Vận Tải Hà Nội</h3>
+                                    của Trường Đại học Giao thông Vận Tải Hà Nội</h3>
                                 <p>(Nếu trường bạn có công thức tương tự dưới đây <br>
                                 thì bạn cũng có thể sử dụng công cụ này)</p>
                             </div>
