--- a/Du_doan/index.html
+++ b/Du_doan/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" prefix="og: https://ogp.me/ns#">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-    <meta property="og:image" content="./assets/img/struggle.png" />
-    <meta property="og:image:width" content="1080" />
-    <meta property="og:image:height" content="1080"; />
     <title>Cần bao nhiêu điểm để ra trường bằng giỏi? | Công cụ tính điểm</title>
+
+
+    <meta property="og:image" content="https://live.staticflickr.com/65535/51773369736_36ff7130f3_k.jpg">
+    <meta property="og:description" content="The Mozilla Developer Network (MDN) provides
+    information about Open Web technologies including HTML, CSS, and APIs for both Web sites
+    and HTML5 Apps. It also documents Mozilla products, like Firefox OS.">
+    <meta property="og:title" content="Mozilla Developer Network">
+
+
     <link rel="icon" type="image/x-icon" href="./assets/img/struggle.png">
     <link rel="stylesheet" href="./assets/css/grid.css">
     <script src="https://kit.fontawesome.com/25a053a904.js" crossorigin="anonymous"></script>
@@ -82,8 +88,4 @@
     </div>
 </body>
 <script src="./assets/js/script1.js"></script>
-<script>
-    var test = 'tranxuan ,phuc';
-    console.log(test.indexOf(','));
-</script>
 </html>
