--- a/Du_doan/index.html
+++ b/Du_doan/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
-<html lang="en" prefix="og: https://ogp.me/ns#">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-    <title>Cần bao nhiêu điểm để ra trường bằng giỏi? | Công cụ tính điểm</title>
+    <title>Cần bao nhiêu điểm để đạt mục tiêu "Bằng giỏi"? | Công cụ tính điểm</title>
 
 
     <meta property="og:image" content="https://live.staticflickr.com/65535/51773369736_36ff7130f3_k.jpg">
-    <meta property="og:description" content="The Mozilla Developer Network (MDN) provides
-    information about Open Web technologies including HTML, CSS, and APIs for both Web sites
-    and HTML5 Apps. It also documents Mozilla products, like Firefox OS.">
-    <meta property="og:title" content="Mozilla Developer Network">
+    <meta property="og:description" content="Công cụ giúp tính điểm cần đạt ở những học kỳ tiếp theo để đặt ra mục tiêu và sự cố gắng trong học tập.">
+    <meta property="og:title" content="Cần bao nhiêu điểm để đạt mục tiêu Bằng giỏi?">
 
 
     <link rel="icon" type="image/x-icon" href="./assets/img/struggle.png">
