--- a/Du_doan/index.html
+++ b/Du_doan/index.html
@@ -7,7 +7,7 @@
     <title>Cần bao nhiêu điểm để đạt mục tiêu "Bằng giỏi"? | Công cụ tính điểm</title>
 
 
-    <meta property="og:image" content="https://live.staticflickr.com/65535/51773369736_36ff7130f3_k.jpg">
+    <meta property="og:image" content="https://photos.google.com/photo/AF1QipNDRn2wKRZv_ZrXwHHlZ3kREFOxTImriBsuxmfs">
     <meta property="og:description" content="Công cụ giúp tính điểm cần đạt ở những học kỳ tiếp theo để đặt ra mục tiêu và sự cố gắng trong học tập.">
     <meta property="og:title" content="Cần bao nhiêu điểm để đạt mục tiêu Bằng giỏi?">
 
