--- a/Du_doan/index.html
+++ b/Du_doan/index.html
@@ -7,7 +7,7 @@
     <title>Cần bao nhiêu điểm để đạt mục tiêu "Bằng giỏi"? | Công cụ tính điểm</title>
 
 
-    <meta property="og:image" content="https://photos.google.com/photo/AF1QipNDRn2wKRZv_ZrXwHHlZ3kREFOxTImriBsuxmfs">
+    <meta property="og:image" content="https://lh3.googleusercontent.com/lCvfZuuzzxbk0XG3Cm2EEqjfajYH9kVJv-PhXwktdkVbOvUk3ilJwUx2ePaEaehZ1IUkHyFgqkdVSNvx8kD3YUm90oPAsmBX-bdNDsAt94tTQXOtwo2vVJR3MibZoPaWuRANjQDM8huWc-XxZrhVCpq0hJDDYX097LFG7pbA2HFtComdZevoJl_Kutfh7E_YFTIYL0WuWFU-7vPqa5a1hfw7eUhqDC-XZSpMpy1To9FMqo7GWchfWziTK210om_MjXsYVj6Hi93SdZ2ALfhk8RUuE_gEHMwBewmF1jKtNCR543p6qxuCrAgQZLm_eFWotXqJMkS-5ox-CElUrTYEMiIeRgwHOjibbpdtGu-BAL1diFXa14Rwu3mjJUOkMCidaybTbiBl7EzVKFm6ajXlxGjM2FNswV-Q9FOogaN0VvYCi7FWZLO3s7kHk1LmfHLln-tzYCg4Pvc6gB3q-_fU11DdPLJd75kIoJJtd5JOuMn-0Qllez-md53d4gf5ZGLr9evE1PiMMr_FwyL3ZiZ5PNMUXf6RPxmd2Z5cBBKZBqfOH-rTBfsV5gdbUFXKHW4JRHGMZxTlOt_5iNcgh4bd25vxq2LfJBMJmI5uU9LxKemCdz0ibzm9HXhFcZsdE9CAJTT_c62x-_JWjpQ6t-F41zl5dTc8OKbK6qH6FWwOGY0PV7gGeBdJaoHio6aNEgF9LGCkCmVajQFMlbB91K2JS6Ab=w650-h734-no?authuser=0">
     <meta property="og:description" content="Công cụ giúp tính điểm cần đạt ở những học kỳ tiếp theo để đặt ra mục tiêu và sự cố gắng trong học tập.">
     <meta property="og:title" content="Cần bao nhiêu điểm để đạt mục tiêu Bằng giỏi?">
 
