--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <meta property="og:type" content="blog" />
     <meta property="og:url" content="https://xuanphuccc.github.io/Tinh-diem/"
 
+    <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Icons+Outlined" rel="stylesheet">
     <script src="https://kit.fontawesome.com/25a053a904.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./assets/css/grid.css">
     <link rel="stylesheet" href="./assets/css/style.css">
@@ -48,7 +50,7 @@
                                     <div class="col l-2 m-2 c-2 th" style="border-radius: 0 6px 0 0;"><label for="diemThi0">Điểm thi</label></div>
                                 </div>
             
-                                <div class="row no-gutters">
+                                <div class="row no-gutters tr">
                                     <div class="col l-3 m-3 c-3 td"><input type="text" name="mon" id="mon0" value="" autofocus placeholder="Nhập vào đây"></div>
                                     <div class="col l-2 m-2 c-2 td"><input type="text" name="tc" id="tc0" value=""></div>
                                     <div class="col l-3 m-3 c-3 td"><input type="text" name="phanTram" id="phanTram0" value="" placeholder="55 hoặc 46 hoặc 37"></div>
@@ -63,29 +65,33 @@
 
                 <!-- --------- Output --------- -->
                 <div class="output">
-                    <div class="table">
-                        <div class="row no-gutters first-row" style="border-radius: 6px 6px 0 0;">
-                            <div class="col l-1 m-1 c-1 th" style="border-radius: 6px 0 0 0;">STT</div>
-                            <div class="col l-2 m-2 c-2 th">Tên môn học</div>
-                            <div class="col l-1 m-1 c-1 th">Số tín chỉ</div>
-                            <div class="col l-1 m-1 c-1 th">Tỉ lệ</div>
-                            <div class="col l-2 m-2 c-2 th">Điểm quá trình</div>
-                            <div class="col l-2 m-2 c-2 th">Điểm thi</div>
-                            <div class="col l-1 m-1 c-1 th">Điểm hệ 10</div>
-                            <div class="col l-1 m-1 c-1 th">Điểm hệ 4</div>
-                            <div class="col l-1 m-1 c-1 th" style="border-radius: 0 6px 0 0;">Điểm chữ</div>
-                        </div>
-                        <div class="sub-row">
-                            <div class="row no-gutters tr">
-                                <div class="col l-1 m-1 c-1 td"><p>---</p></div>
-                                <div class="col l-2 m-2 c-2 td"><p>---</p></div>
-                                <div class="col l-1 m-1 c-1 td"><p>---</p></div>
-                                <div class="col l-1 m-1 c-1 td"><p>---</p></div>
-                                <div class="col l-2 m-2 c-2 td"><p>---</p></div>
-                                <div class="col l-2 m-2 c-2 td"><p>---</p></div>
-                                <div class="col l-1 m-1 c-1 td"><p>---</p></div>
-                                <div class="col l-1 m-1 c-1 td"><p>---</p></div>
-                                <div class="col l-1 m-1 c-1 td"><p>---</p></div>
+                    <h3 class="table-label">Bảng kết quả</h3>
+                    <p class="label-desc">(Kết quả đã được làm tròn)</p>
+                    <div class="table-wrap">
+                        <div class="table table-output">
+                            <div class="row no-gutters first-row" style="border-radius: 6px 6px 0 0;">
+                                <div class="col l-1 m-1 c-1 th" style="border-radius: 6px 0 0 0;">STT</div>
+                                <div class="col l-2 m-2 c-2 th">Tên môn học</div>
+                                <div class="col l-1 m-1 c-1 th">Số tín chỉ</div>
+                                <div class="col l-1 m-1 c-1 th">Tỉ lệ</div>
+                                <div class="col l-2 m-2 c-2 th">Điểm quá trình</div>
+                                <div class="col l-2 m-2 c-2 th">Điểm thi</div>
+                                <div class="col l-1 m-1 c-1 th">Điểm hệ 10</div>
+                                <div class="col l-1 m-1 c-1 th">Điểm hệ 4</div>
+                                <div class="col l-1 m-1 c-1 th" style="border-radius: 0 6px 0 0;">Điểm chữ</div>
+                            </div>
+                            <div class="sub-row">
+                                <div class="row no-gutters tr">
+                                    <div class="col l-1 m-1 c-1 td"><p>---</p></div>
+                                    <div class="col l-2 m-2 c-2 td"><p>---</p></div>
+                                    <div class="col l-1 m-1 c-1 td"><p>---</p></div>
+                                    <div class="col l-1 m-1 c-1 td"><p>---</p></div>
+                                    <div class="col l-2 m-2 c-2 td"><p>---</p></div>
+                                    <div class="col l-2 m-2 c-2 td"><p>---</p></div>
+                                    <div class="col l-1 m-1 c-1 td"><p>---</p></div>
+                                    <div class="col l-1 m-1 c-1 td"><p>---</p></div>
+                                    <div class="col l-1 m-1 c-1 td"><p>---</p></div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -140,7 +146,7 @@
                             <div class="text-wrap">
                                 <h3>Công cụ tính điểm này sử dụng bảng quy đổi điểm
                                     của Trường Đại học Giao thông Vận Tải Hà Nội</h3>
-                                <p>(Nếu trường bạn có công thức tương tự dưới đây <br>
+                                <p>(Nếu trường bạn có công thức tương tự dưới đây
                                 thì bạn cũng có thể sử dụng công cụ này)</p>
                             </div>
                             
