--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                                     <div class="col l-3 m-3 c-3 td">
                                         <!-- <input type="number" name="phanTram" id="phanTram0" value=""> -->
 
-                                        <select id="phanTram0" name="phanTram">
+                                        <select id="phanTram0" name="phanTram" size="3">
                                             <option value="55">50% - 50%</option>
                                             <option value="46">40% - 60%</option>
                                             <option value="37">30% - 70%</option>
