--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <h4>Giải thích thuật ngữ:</h4>
                         <p>Trọng số: là tỉ lệ của điểm quá trình 
                         và điểm thi <br> (ví dụ: 40% - 60% tức là
-                        điểm quá trình chiếm 40% và điểm thi chiếm 60%).</p>
+                        điểm quá trình chiếm 40% và điểm thi chiếm 60% của điểm học phần).</p>
                     </div>
     
                     <!-- ---------------- Input --------------- -->
