--- a/Du_doan/index.html
+++ b/Du_doan/index.html
@@ -13,9 +13,11 @@
     <meta property="og:type" content="blog" />
     <meta property="og:url" content="https://xuanphuccc.github.io/Tinh-diem/Du_doan/"
 
+    <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Icons+Outlined" rel="stylesheet">
+
     <link rel="icon" type="image/x-icon" href="./assets/img/struggle.png">
     <link rel="stylesheet" href="./assets/css/grid.css">
-    <script src="https://kit.fontawesome.com/25a053a904.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
