--- a/Du_doan/index.html
+++ b/Du_doan/index.html
@@ -8,8 +8,8 @@
 
 
     <meta property="og:image" content="https://lh3.googleusercontent.com/25o5w2IJ2PFNHh2Tp5JRMDNNqwmEivzUgjs5lFlNhS68P4ZsODQw1H5ecKd09OhXuuFULiYVY63EP1RQVsWZq76y0xxso3UAnuflrITM8ff0b2prLPpq8g68HrcNBnbdLMwTDVRSTVXpmAjI_Sy4qKHyshgeiIP1-IGmjZrcK_cdjqJwRwrOo6fBJQs3OuHUXEC4JKs0LIeDp5lYCWol9M_cih6BuEpFZw5sW77lPELKUh7mG5CSZwWbqThwcue7jILAIZlsX-NBUK4du3Btlf_R3w4OhQ7i6VGNwxhkmaQN7MZ_PR1d-WnOC62lgOkkpDt2kO-u_SJ0WjSLGxAvxkf9-O1QoDMUReCIPMTaKf-9L-u-yNUepvc584dNXPzyy9hXFsZXgEX_hSYYYLizi1v5-6pLZwemPYVUSkwYCyCCVHHUODCAKMjVY5mFAN2sh9rnlZFsm1hpTTLj0sWpXx5GdYy--DIuaHhCwj2tpeavdP8GBRB_Mk1qDmIYKHUlC8Ae4WmLw7IG1CCh3RbYPsl8uw0ivhhI06dJVOWBRebYtgvh-kDjOF6DYCr80t02cjtnO11SbWSllKxwO7AtlWqJVdAf0bWFPt6Wrzrjxn_JfREN0crF3luVlDo2MtyQwiehVz4nLi03QYyC6I99poqpfvfbFBcsnELNr1dFZpX_TpiDpe7mQXoUySZdi9uaDRzaXpxq0uBQ5nzVfstYYUcS=w1233-h816-no?authuser=0">
-    <meta property="og:image:width" content="1500">
-    <meta property="og:image:height" content="1500">
+    <meta property="og:image:width" content="500" />
+    <meta property="og:image:height" content="500" />
 
     <meta property="og:description" content="Tính điểm cần đạt ở những học kỳ tiếp theo để đặt ra mục tiêu và sự cố gắng trong học tập.">
     <meta property="og:title" content="Cần bao nhiêu điểm để đạt mục tiêu Bằng giỏi?">
