--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Tính điểm học phần | Tính điểm hệ tín chỉ | Tính điểm đại học</title>
     <link rel="icon" type="image/x-icon" href="./assets/img/">
 
-    <meta property="og:image" content="https://lh3.googleusercontent.com/b8SUo2UZAj4dnD1meeO8c2E2gBKkM6kbQN3zvbgguCGqIR4C-ZR6VKh44X9qOps9svYA3nE9qsgBhGJPYgd3eJTnvQC1U_qtUk1q0X-qhC76bX-N5DR_7zHCWc7jnEJrxKd_PtyRzDcQKK2TCRqz0MIpgMkEKlwtdxT6lmexaVnRAoNRFlbjrNvFoJR2q8VKSKZUcpnbyLFZdRb7vRlCO2XoHfy1VPo4Y6d2OY1Kf-FBIRFyPT9caZEQxENAus05wT4rKDT4zwab-x8_WzdSUXvV4FJfGzd1Xfnh7iJIoKe_JV2Cpe4OH6IX0hjyptXG3RMkHE-jvezIVa_qhpHbrJlHm4DntV-KdX9Q-QUknOkUC1gljAxXjO45GeYxPklcouOhsgGVgpr8hS6hnce1LhISZQNnVIV_P3_8-CQBaw8i3VKvK5eGwbNMC5TpUgoS-mJt1ZK6ngEfWUNjrL8Vr6GILrdK4KI41DxDchtvCspW_iGk-80bMvmfdTLmLmHICDmXps9c-LSEz_3hPgZV9Y2AStfjrCv88mb84Ux1rvYm9khRaU4qEFoN_W4GVMwMfUNkadVjnLwvphqS9cezcZ05hud7eJzfhULiucAEb7su88hWmEmr_icXM7p6Cz9mpzzZPcACb2WiiZ5bRpx3f71VyLHeRgXUybiyVwblun9hxbnFK2HvBaoyKsuzeRSZaxcO0WkLYlaZXkBXJkIj7Qen=s902-no?authuser=0">
+    <meta property="og:image" content="https://live.staticflickr.com/65535/51787284488_16171bd0bc_k.jpg">
     <meta property="og:image:width" content="500" />
     <meta property="og:image:height" content="500" />
 
