fix logo display

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tính điểm học phần | Tính điểm hệ tín chỉ | Tính điểm đại học</title>
-    <link rel="icon" type="image/x-icon" href="./assets/img/">
+    <link rel="icon" type="image/x-icon" href="./assets/img/logoipsum-logo-39.svg">
 
     <meta property="og:image" content="https://live.staticflickr.com/65535/51787284488_16171bd0bc_k.jpg">
     <meta property="og:image:width" content="1500" />
