--- a/Du_doan/index.html
+++ b/Du_doan/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <title>Cần bao nhiêu điểm để đạt mục tiêu "Bằng giỏi"? | Công cụ tính điểm</title>
-
+    <link rel="icon" type="image/x-icon" href="./assets/img/logoipsum-logo-39.svg">
 
     <meta property="og:image" content="https://live.staticflickr.com/65535/51787655289_82492ed65d_k.jpg">
     <meta property="og:image:width" content="1500" />
@@ -19,7 +19,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons+Outlined" rel="stylesheet">
 
-    <link rel="icon" type="image/x-icon" href="./assets/img/struggle.png">
     <link rel="stylesheet" href="./assets/css/grid.css">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
