--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                                 <div class="col l-1 m-1 c-1 th" style="border-radius: 6px 0 0 0;">STT</div>
                                 <div class="col l-2 m-2 c-2 th">Tên môn học</div>
                                 <div class="col l-1 m-1 c-1 th">Số tín chỉ</div>
-                                <div class="col l-1 m-1 c-1 th">Tỉ lệ</div>
+                                <div class="col l-1 m-1 c-1 th">Trọng số</div>
                                 <div class="col l-2 m-2 c-2 th">Điểm quá trình</div>
                                 <div class="col l-2 m-2 c-2 th">Điểm thi</div>
                                 <div class="col l-1 m-1 c-1 th">Điểm hệ 10</div>
