--- a/index.html
+++ b/index.html
@@ -50,21 +50,21 @@
 
                                     <div class="col l-3 m-12 c-12">
                                         <div class="wrap2">
-                                            <label for="mon0">Tên môn học</label>
+                                            <label for="mon">Tên môn học</label>
                                             <input type="text" name="mon" id="mon" value="" autofocus>
                                         </div>
                                     </div>
 
                                     <div class="col l-2 m-12 c-12">
                                         <div class="wrap2">
-                                            <label for="tc0">Số tín chỉ</label>
+                                            <label for="tc">Số tín chỉ</label>
                                             <input type="number" name="tc" id="tc" value="">
                                         </div>
                                     </div>
 
                                     <div class="col l-3 m-12 c-12">
                                         <div class="wrap2">
-                                            <label for="phanTram0">Trọng số</label>
+                                            <label for="phanTram">Trọng số</label>
                                             <select id="phanTram" name="phanTram">
                                                 <option value="55">50% / 50%</option>
                                                 <option value="46">40% / 60%</option>
@@ -75,14 +75,14 @@
 
                                     <div class="col l-2 m-12 c-12">
                                         <div class="wrap2">
-                                            <label for="diemqt0">Điểm quá trình</label>
+                                            <label for="diemqt">Điểm quá trình</label>
                                             <input type="number" name="diemqt" id="diemqt" value="">
                                         </div>
                                     </div>
 
                                     <div class="col l-2 m-12 c-12">
                                         <div class="wrap2">
-                                            <label for="diemThi0">Điểm thi</label>
+                                            <label for="diemThi">Điểm thi</label>
                                             <input type="number" name="diemThi" id="diemThi" value="">
                                         </div>
                                     </div>
