--- a/index.html
+++ b/index.html
@@ -32,9 +32,30 @@
             </div>
         </div>
 
+        <div id="navbar" class="">
+            <div class="grid wide">
+                <div class="navbar-wrap">
+                    <div class="logo-container">
+                        <img src="./assets/img/logoipsum-logo-39.svg" alt="Logo">
+                    </div>
+                    <div class="nav-menu">
+                        <ul>
+                            <li><a href="#input-tg">Tính điểm</a></li>
+                            <li><a href="./Du_doan/">Mục tiêu</a></li>
+                            <li><a href="#footer">Về chúng tôi</a></li>
+                        </ul>
+                    </div>
+                    <div class="dark-mode-wrap">
+                        <p id="mode">Light mode</p>
+                        <i class="material-icons-outlined">brightness_medium</i>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div class="points">
             <div class="grid wide">
-                <div class="input-wraper">
+                <div class="input-wraper"  id="input-tg">
                     <div class="training">
                         <h4>Giải thích thuật ngữ:</h4>
                         <p>Trọng số: là tỉ lệ của điểm quá trình 
@@ -213,7 +234,7 @@
             </div>
         </div>
 
-        <div class="footer">
+        <div id="footer">
             <a href="./Du_doan/">Bạn cần bao nhiêu điểm để có bằng Giỏi?</a>
         </div>
     </div>
