--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                                     <div class="col l-3 m-12 c-12">
                                         <div class="wrap2">
                                             <label for="mon">Tên môn học</label>
-                                            <input type="text" name="mon" id="mon" value="" autofocus>
+                                            <input type="text" name="mon" id="mon" value="">
                                         </div>
                                     </div>
 
