--- a/index.html
+++ b/index.html
@@ -33,15 +33,19 @@
         </div>
 
         <div id="navbar" class="">
-            
+            <div class="sub-menu-icon">
+                <i class="material-icons-outlined">menu_open</i>
+            </div>
             <div class="logo-container">
-                <img src="./assets/img/logoipsum-logo-39.svg" alt="Logo">
+                <a href="#">
+                    <img src="./assets/img/logoipsum-logo-39.svg" alt="Logo">
+                </a>
             </div>
             <div class="nav-menu">
                 <ul>
                     <li><a href="#input-tg">Tính điểm</a></li>
-                    <li><a href="./Du_doan/">Mục tiêu</a></li>
-                    <li><a href="#footer">Về chúng tôi</a></li>
+                    <li><a href="./Muc-tieu/">Mục tiêu</a></li>
+                    <li><a href="#footer">Giới thiệu</a></li>
                 </ul>
             </div>
             <div class="dark-mode-wrap">
@@ -232,7 +236,21 @@
         </div>
 
         <div id="footer">
-            
+            <div class="footer-wrap">
+                <p>© Tran Xuan Phuc</p>
+                <div class="brand-logo">
+                    <div class="facebook">
+                        <a href="https://www.facebook.com/xuanphuc.tran.superman/">
+                            <img src="./assets/img/facebook-brands.svg" alt="Facebook">
+                        </a>
+                    </div>
+                    <div class="github">
+                        <a href="https://github.com/xuanphuccc/Tinh-diem">
+                            <img src="./assets/img/github-brands.svg" alt="Github">
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
